--- a/app/src/main/res/layout/fragment_interested_in_event.xml
+++ b/app/src/main/res/layout/fragment_interested_in_event.xml
@@ -11,11 +11,21 @@
 
     <Button
         android:id="@+id/buttonInterested"
-        android:layout_height="48dp"
-        android:layout_marginTop="78dp"
-        android:layout_marginEnd="5dp"
+        android:layout_width="138dp"
+        android:layout_height="61dp"
         android:layout_gravity="center"
         android:layout_marginStart="150dp"
-        android:text="Interested in event"
-        android:layout_width="136dp"/>
+        android:layout_marginTop="78dp"
+        android:layout_marginEnd="5dp"
+        android:text="Interested in event" />
+
+    <Button
+        android:id="@+id/buttonSeeDetailsPaid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/buttonInterested"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="145dp"
+        android:text="See details" />
 </RelativeLayout>
