--- a/app/src/main/res/layout/fragment_interested_in_event.xml
+++ b/app/src/main/res/layout/fragment_interested_in_event.xml
@@ -28,4 +28,14 @@
         android:layout_marginTop="42dp"
         android:layout_marginEnd="145dp"
         android:text="See details" />
+
+    <Button
+        android:id="@+id/buttonNotIntr"
+        android:layout_width="121dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/buttonSeeDetailsPaid"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="133dp"
+        android:layout_marginBottom="-105dp"
+        android:text="Not interested" />
 </RelativeLayout>
