--- a/app/src/main/res/layout/fragment_profile_organiser.xml
+++ b/app/src/main/res/layout/fragment_profile_organiser.xml
@@ -6,23 +6,59 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_with_stars"
-    tools:context=".ProfileAttendeeFragment">
+    tools:context=".ProfileOrganiserFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <ImageView
+        android:id="@+id/imageViewOrganiserProfileImage"
+        android:layout_width="220dp"
+        android:layout_height="220dp"
+        android:layout_marginTop="88dp"
+        android:background="@drawable/circle_background"
+        android:clipToOutline="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/profileicon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/addprofilepicOrganiser"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_gravity="end|bottom"
+        android:background="@drawable/add_photo"
+        android:backgroundTint="#FFA500"
+        app:layout_constraintEnd_toEndOf="@+id/imageViewOrganiserProfileImage"
+        app:layout_constraintBottom_toBottomOf="@+id/imageViewOrganiserProfileImage" />
+
+
+    <TextView
+        android:id="@+id/emailOrganiser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="email@organiser.com"
+        android:textColor="#AFABAB"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewOrganiserProfileImage"
+        app:layout_constraintVertical_bias="0.081" />
 
     <Button
         android:id="@+id/deleteAccountOrganiserBtn"
         android:layout_width="145dp"
         android:layout_height="48dp"
         android:layout_marginStart="1dp"
-        android:layout_marginBottom="112dp"
+        android:layout_marginBottom="108dp"
         android:backgroundTint="#EC4646"
         android:text="Delete account"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/LOGOUTBUTTONORGANISER"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/emailOrganiser"
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
@@ -30,79 +66,13 @@
         android:layout_width="145dp"
         android:layout_height="48dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginBottom="112dp"
+        android:layout_marginBottom="108dp"
         android:text="Log out"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/deleteAccountOrganiserBtn"
         app:layout_constraintHorizontal_bias="0.382"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/emailOrganiser"
         app:layout_constraintVertical_bias="1.0" />
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="227dp"
-        android:layout_height="203dp"
-        android:layout_marginTop="68dp"
-        android:src="@drawable/profileicon"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/emailOrganisor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="email@organisor.com"
-        android:textColor="#AFABAB"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
-
-    <TextView
-        android:id="@+id/textViewDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Organiser Description"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.109"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailOrganisor" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="330dp"
-        android:layout_height="191dp"
-        android:layout_marginTop="8dp"
-        android:background="#3B2474"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:paddingEnd="10dp"
-        android:paddingRight="10dp"
-        android:text="It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites"
-        android:textAlignment="viewStart"
-        android:textColor="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />
-
-    <ImageView
-        android:id="@+id/SettingsOrganiser"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@android:drawable/ic_menu_edit"
-        app:layout_constraintBottom_toTopOf="@+id/textViewDescription"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.114"
-        app:layout_constraintStart_toEndOf="@+id/emailOrganisor"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4"
-        app:layout_constraintVertical_bias="0.459" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
