--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -15,7 +15,7 @@
         <item
             android:id="@+id/Notifications"
             android:icon="@drawable/notifications"
-            android:title="Create Event"/>
+            android:title="Notifications"/>
 
         <item
             android:id="@+id/Profile"
