--- a/app/src/main/res/layout-land/activity_register_organisation.xml
+++ b/app/src/main/res/layout-land/activity_register_organisation.xml
@@ -17,83 +17,86 @@
         android:id="@+id/password"
         android:layout_width="304dp"
         android:layout_height="54dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="65dp"
+        android:layout_marginTop="8dp"
         android:background="#9A8FAF"
         android:hint="@string/prompt_password"
         android:imeActionLabel="@string/action_sign_in_short"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
 
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/username" />
 
     <EditText
-        android:id="@+id/passwordConfirmAttendee"
+        android:id="@+id/passwordConfirmOrganisation"
         android:layout_width="304dp"
         android:layout_height="54dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="65dp"
+        android:layout_marginTop="8dp"
         android:background="#9A8FAF"
-        android:hint="@string/confirm_password_attendee"
+        android:hint="@string/confirm_password"
         android:imeActionLabel="@string/action_sign_in_short"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
-        android:selectAllOnFocus="true"
 
+        android:selectAllOnFocus="true"
+        app:layout_constraintBottom_toTopOf="@+id/btn_register"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/password"
+        app:layout_constraintVertical_bias="0.086" />
 
     <EditText
         android:id="@+id/username"
         android:layout_width="304dp"
         android:layout_height="59dp"
-        android:layout_marginTop="360dp"
+        android:layout_marginStart="65dp"
+        android:layout_marginTop="32dp"
         android:background="#9A8FAF"
         android:hint="@string/prompt_email"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
 
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_register"
         android:layout_width="136dp"
         android:layout_height="48dp"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="88dp"
         android:text="@string/register"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toEndOf="@+id/backToMain"
-        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmAttendee"
-        app:layout_constraintVertical_bias="0.619" />
+        app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <Button
         android:id="@+id/backToMain"
         android:layout_width="136dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginStart="360dp"
+        android:layout_marginTop="88dp"
         android:text="@string/back"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btn_register"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmAttendee"
-        app:layout_constraintVertical_bias="0.619" />
+        app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="255dp"
         android:layout_height="245dp"
-        app:layout_constraintBottom_toTopOf="@+id/username"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.034"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.53"
+        app:layout_constraintVertical_bias="0.298"
         app:srcCompat="@drawable/profileicon" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
