--- a/app/src/main/res/layout-land/activity_forgot_password.xml
+++ b/app/src/main/res/layout-land/activity_forgot_password.xml
@@ -5,30 +5,30 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_stars"
+    android:background="@drawable/background_stars_horizontal"
     tools:context=".forgotPassword.ForgotPasswordActivity">
 
     <EditText
         android:id="@+id/code"
         android:layout_width="304dp"
         android:layout_height="50dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="28dp"
         android:background="#9A8FAF"
         android:hint="@string/prompt_email"
         android:inputType="textEmailAddress"
+
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
-
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="190dp"
         android:layout_height="189dp"
-        android:layout_marginTop="88dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="84dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/profileicon" />
@@ -37,37 +37,40 @@
         android:id="@+id/sendCode"
         android:layout_width="136dp"
         android:layout_height="48dp"
-        android:layout_marginStart="5dp"
+        android:layout_marginTop="47dp"
+        android:layout_marginBottom="92dp"
         android:backgroundTint="#A22F99"
         android:text="Send Email"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.291"
         app:layout_constraintStart_toEndOf="@+id/backToLoginPage"
         app:layout_constraintTop_toBottomOf="@+id/code"
-        app:layout_constraintVertical_bias="0.505" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/backToLoginPage"
         android:layout_width="136dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="47dp"
+        android:layout_marginBottom="92dp"
         android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/sendCode"
-        app:layout_constraintHorizontal_bias="0.381"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/code"
-        app:layout_constraintVertical_bias="0.502" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="64dp"
         android:text="Forgot Password"
         android:textColor="@color/white"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
