--- a/app/src/main/res/layout-sw600dp/fragment_single_event.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_single_event.xml
@@ -2,18 +2,16 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
-    android:name="com.example.bebeappthatworks.ItemFragment"
+    android:id="@+id/one"
+    android:name="com.example.bebeappthatworks.One"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="0dp"
     android:layout_marginRight="0dp"
-    android:background="@drawable/bg_with_stars"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".EventsFragment"
-    tools:listitem="@layout/fragment_events"
+    android:background="@drawable/bg_with_stars"
+    tools:context=".SingleEventFree"
+    tools:showIn="@layout/layout_one_event">
 
-    />
-
-
+</androidx.recyclerview.widget.RecyclerView>
 
