--- a/app/src/main/res/layout/register_button.xml
+++ b/app/src/main/res/layout/register_button.xml
@@ -11,32 +11,38 @@
 
     <Button
         android:id="@+id/buttonRegister"
+        android:layout_width="136dp"
         android:layout_height="48dp"
-        android:layout_marginTop="78dp"
-        android:layout_marginEnd="5dp"
+        android:layout_alignParentTop="true"
         android:layout_gravity="center"
-        android:layout_marginStart="150dp"
-        android:text="Register"
-        android:layout_width="136dp"/>
+        android:layout_marginTop="158dp"
+        android:layout_marginLeft="30dp"
+
+
+        android:text="Register" />
 
     <Button
         android:id="@+id/buttonDeregister"
-        android:layout_height="48dp"
-        android:layout_marginTop="150dp"
-        android:layout_marginEnd="5dp"
-        android:layout_gravity="center"
-        android:layout_marginStart="150dp"
         android:layout_width="136dp"
+        android:layout_height="48dp"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="center"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="502dp"
+        android:layout_marginEnd="5dp"
+        android:backgroundTint="#C50D0D"
         android:text="Deregister" />
 
     <Button
         android:id="@+id/buttonSeeDetails"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="136dp"
+        android:layout_height="48dp"
         android:layout_alignBottom="@+id/buttonDeregister"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="149dp"
-        android:layout_marginBottom="-82dp"
+        android:layout_marginStart="10dp"
+
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="343dp"
         android:text="See details" />
 
 </RelativeLayout>
