--- a/app/src/main/res/layout-land/register_button.xml
+++ b/app/src/main/res/layout-land/register_button.xml
@@ -29,7 +29,7 @@
         android:layout_marginStart="330dp"
         android:layout_marginTop="160dp"
         android:layout_marginEnd="5dp"
-        android:backgroundTint="#C50D0D"
+        android:backgroundTint="#CF2C2C"
         android:text="Deregister" />
 
     <Button
