--- a/app/src/main/res/layout/fragment_interested_in_event.xml
+++ b/app/src/main/res/layout/fragment_interested_in_event.xml
@@ -13,29 +13,32 @@
         android:id="@+id/buttonInterested"
         android:layout_width="138dp"
         android:layout_height="61dp"
+        android:layout_alignParentEnd="true"
         android:layout_gravity="center"
         android:layout_marginStart="150dp"
         android:layout_marginTop="78dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginEnd="37dp"
         android:text="Interested in event" />
 
     <Button
         android:id="@+id/buttonSeeDetailsPaid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/buttonInterested"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="42dp"
-        android:layout_marginEnd="145dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="88dp"
+        android:layout_marginEnd="223dp"
         android:text="See details" />
 
     <Button
         android:id="@+id/buttonNotIntr"
         android:layout_width="121dp"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/buttonSeeDetailsPaid"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="133dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="-105dp"
+        android:layout_marginStart="135dp"
+        android:layout_marginTop="300dp"
+        android:backgroundTint="#CF2C2C"
         android:text="Not interested" />
 </RelativeLayout>
