--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -2,10 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".AttendeeActivity">
+    tools:context=".OrganiserActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -146,7 +146,16 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/deleteEvent"
+        android:layout_width="136dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="250dp"
+        android:layout_marginTop="550dp"
+        android:layout_marginEnd="5dp"
+        android:text="Delete" />
 
 </RelativeLayout>
