--- a/app/src/main/res/layout/layout_one_event.xml
+++ b/app/src/main/res/layout/layout_one_event.xml
@@ -135,9 +135,52 @@
                 app:layout_constraintStart_toEndOf="@id/time"
                 app:layout_constraintTop_toBottomOf="@+id/time" />
 
+            <Button
+                android:id="@+id/pula"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="#00FFFFFF"
+                android:onClick="openMaps"
+                android:text="."
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/location"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.55"
+                app:layout_constraintStart_toStartOf="@+id/pula"
+                app:layout_constraintTop_toTopOf="@+id/pula"
+                app:layout_constraintVertical_bias="0.65" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/buttonRegister"
+        android:layout_width="136dp"
+        android:layout_height="48dp"
+        android:layout_alignParentStart="true"
+        android:layout_gravity="center"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="520dp"
+        android:text="Register" />
+
+    <Button
+        android:id="@+id/buttonDeregister"
+        android:layout_width="136dp"
+        android:layout_height="48dp"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="center"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="520dp"
+        android:layout_marginEnd="50dp"
+        android:text="Deregister" />
+
 
 </RelativeLayout>
