--- a/app/src/main/res/layout/one_event_layout.xml
+++ b/app/src/main/res/layout/one_event_layout.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_event">
+    tools:showIn="@layout/activity_attendee">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/navigation_one_fragment_content_main"
