--- a/app/src/main/res/layout-land/fragment_profile_attendee.xml
+++ b/app/src/main/res/layout-land/fragment_profile_attendee.xml
@@ -9,7 +9,7 @@
     tools:context=".ProfileAttendeeFragment">
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/imageViewAttendeeProfileImage"
         android:layout_width="182dp"
         android:layout_height="172dp"
         android:layout_marginTop="32dp"
@@ -23,14 +23,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/addprofilepic"
+        android:id="@+id/addprofilepicAttendee"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_gravity="end|bottom"
         android:background="@drawable/add_photo"
         android:backgroundTint="#FFA500"
-        app:layout_constraintEnd_toEndOf="@+id/imageView4"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView4" />
+        app:layout_constraintEnd_toEndOf="@+id/imageViewAttendeeProfileImage"
+        app:layout_constraintBottom_toBottomOf="@+id/imageViewAttendeeProfileImage" />
 
     <Button
         android:id="@+id/deleteAccountAttendeeBtn"
@@ -53,7 +53,7 @@
         android:text="Log out"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/deleteAccountAttendeeBtn"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintStart_toEndOf="@+id/imageViewAttendeeProfileImage"
         app:layout_constraintTop_toBottomOf="@+id/emailAttendee"
         app:layout_constraintVertical_bias="0.231" />
 
