--- a/app/src/main/res/layout/fragment_profile_attendee.xml
+++ b/app/src/main/res/layout/fragment_profile_attendee.xml
@@ -32,6 +32,19 @@
         app:layout_constraintBottom_toBottomOf="@+id/imageViewAttendeeProfileImage" />
 
     <TextView
+        android:id="@+id/textName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Name"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewAttendeeProfileImage" />
+
+    <TextView
         android:id="@+id/emailAttendee"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -41,8 +54,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewAttendeeProfileImage"
-        app:layout_constraintVertical_bias="0.061" />
+        app:layout_constraintTop_toBottomOf="@+id/textName"
+        app:layout_constraintVertical_bias="0.056" />
+
+    <Button
+        android:id="@+id/openSettings"
+        android:layout_width="145dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="80dp"
+        android:text="Settings"
+        app:layout_constraintBottom_toTopOf="@+id/LOGOUTBUTTONATTENDEE"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailAttendee"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/deleteAccountAttendeeBtn"
