--- a/app/src/main/res/layout/activity_settings_attendee.xml
+++ b/app/src/main/res/layout/activity_settings_attendee.xml
@@ -8,4 +8,131 @@
     android:layout_height="match_parent"
     tools:context=".SettingsAttendee">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="200dp"
+        tools:layout_editor_absoluteY="78dp">
+
+        <TextView
+            android:layout_width="211dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="111dp"
+            android:layout_marginTop="42dp"
+            android:layout_marginEnd="89dp"
+            android:text="Account Settings"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            android:textStyle="bold">
+        </TextView>
+
+        <TextView
+            android:id="@+id/editDesc"
+            android:layout_width="159dp"
+            android:layout_height="43dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="130dp"
+            android:text="Edit Description"
+            android:textColor="@color/white"
+            android:textSize="20sp"></TextView>
+
+        <EditText
+            android:id="@+id/description_field"
+            android:layout_width="266dp"
+            android:layout_height="66dp"
+            android:layout_below="@+id/editDesc"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/white"
+            android:hint="Update Current Description"></EditText>
+
+        <TextView
+            android:id="@+id/textViewNoti"
+            android:layout_width="wrap_content"
+            android:layout_height="42dp"
+            android:layout_below="@+id/update_username"
+            android:layout_gravity="center"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="39dp"
+            android:text="Turn on Notifications"
+            android:textColor="@color/white"
+            android:textSize="20sp"></TextView>
+
+        <ToggleButton
+            android:id="@+id/noti_toggle"
+            android:layout_width="118dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/update_username"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="43dp"
+            android:layout_marginTop="28dp"
+            android:layout_marginEnd="43dp"
+            android:layout_toEndOf="@+id/textViewNoti" />
+
+        <TextView
+            android:id="@+id/updateUsername"
+            android:layout_width="180dp"
+            android:layout_height="38dp"
+            android:layout_below="@+id/description_field"
+            android:layout_gravity="center"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="50dp"
+            android:text="Update Username"
+            android:textColor="@color/white"
+            android:textSize="20sp">
+
+        </TextView>
+
+        <EditText
+            android:id="@+id/update_username"
+            android:layout_width="254dp"
+            android:layout_height="48dp"
+            android:layout_below="@+id/updateUsername"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/white"
+            android:hint="Update Current Username">
+
+        </EditText>
+
+        <Button
+            android:id="@+id/backtoprofile"
+            android:layout_width="116dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textViewNoti"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="108dp"
+            android:text="Back"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/save_changes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textViewNoti"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="75dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="108dp"
+            android:layout_toEndOf="@+id/backtoprofile"
+            android:text="Update Settings"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </RelativeLayout>
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
